--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
   --dark-purple:#3a0667;
   --light-orange:#ffc12a;
   --dark-orange:#ff8304;
+  --grey: #f3f3f3;
 }
 .navbar {
     background: #ffffff;
