--- a/src/components/Uniqueness/Uniqueness.css
+++ b/src/components/Uniqueness/Uniqueness.css
@@ -74,7 +74,16 @@
           justify-content: center;
           align-items: center;
           width: 100%;
-          margin: 40px 38px;
+          margin: 60px 8px;
+      }
+      .unique-header{
+         display: flex;
+         justify-content: center;
+         font-size: 20px;
+      }
+      .unique-card{
+          width: 70%;
+          margin-bottom: 10%;
       }
       
   }
