--- a/src/pages/Dashboard/components/ListCard.css
+++ b/src/pages/Dashboard/components/ListCard.css
@@ -1,6 +1,6 @@
 /* .card{
     /* background: ; */
-/* } */ */
+/* } */ 
 .transactions-input{
     background: rgba(144,15,255,0.3);
     color:#2e065e;
