--- a/src/pages/Dashboard/components/ListCard.css
+++ b/src/pages/Dashboard/components/ListCard.css
@@ -1,18 +1,37 @@
-/* .card{
-    /* background: ; */
-/* } */ 
+
 .transactions-input{
     background: rgba(144,15,255,0.3);
     color:#2e065e;
-    width: 70vw;
     margin-left: -20vw;
     height: 30px;
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
+   .list-card{
+        height: 10px;
+        width: 99%;
+        border-radius: 30px;
+        margin: 30px;
+        margin-left: 0;
+        padding: 30px;
+        justify-content:space-around;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
 .purple-input::placeholder{
     color:#2e065e;
 }
-/* .orange-input{} */
+@media screen and (max-width: 960px) {
+    .list-card{
+        height: 1px;
+        width: 99%;
+        border-radius: 20px;
+        
+    }
+    .list-card h4{
+        font-size: 13px;
+    }
+}
    
