--- a/src/pages/Dashboard/components/Nav/Nav.css
+++ b/src/pages/Dashboard/components/Nav/Nav.css
@@ -6,3 +6,8 @@
     font-size: 20px;
     letter-spacing: 0.3em;
 }
+@media screen and (max-width: 960px) {
+   .nav-section{
+       margin-top: 30px;
+   }
+}
