--- a/src/pages/Dashboard/components/Sidebar.css
+++ b/src/pages/Dashboard/components/Sidebar.css
@@ -5,6 +5,12 @@
     align-items: center;
     display: flex;
 }
+.side-bar{
+    display: block;
+}
+.sidebard-logo{
+    display: none;
+}
 .left-section{
     background-color:var(--grey);
     position: fixed;
@@ -69,20 +75,18 @@
 
 @media screen and (max-width: 960px) {
 
-  
-    /* .nav-menu.active {
-      background: linear-gradient(var(--light-orange),var(--dark-orange));
-      left: 0;
-      opacity: 0.9;
-      max-width: 99%;
-      transition: all 0.6s ease;
-      z-index: 1;
-
-   */
-  
-   .toggle {
-      display: block;
-      position: absolute;
+  .left-section{
+      display: none;
+  }
+   .sidebard-logo{
+       display: block;
+       margin: 10px 20px 0px 10px ;
+       max-width: 50%;
+       position: absolute;
+   }
+.toggle {
+      display: flex;
+      position: fixed;
       top: 0;
       right: 0;
       transform: translate(-100%, 60%);
@@ -90,24 +94,10 @@
       cursor: pointer;
       color: var(--dark-orange);
       transition: all 0.6s ease;
+      background-color: rgb(255, 255, 255);
     }
 
-      .left-section {
-        display: flex;
-        flex-direction: column;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-      }
-    
-      .left-section.show {
-        /* background: linear-gradient(var(--light-orange),var(--dark-orange)); */
-        left: 0;
-        opacity: 0.9;
-        transition: all 0.6s ease;
-        z-index: 1;
-      }
-    
+     
     .fa-times {
       color: #fff;
       font-size: 2rem;
@@ -116,3 +106,25 @@
   
   }
   /* smaller screens ends here */
+   /* .left-section {
+        left: -100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+      } */
+    
+      /* .left-section.show {
+        /* background: linear-gradient(var(--light-orange),var(--dark-orange)); */
+        /* left: 0;
+        opacity: 0.9;
+        transition: all 0.6s ease;
+        z-index: 0;
+      } */ 
+       /* .nav-menu.active {
+      background: linear-gradient(var(--light-orange),var(--dark-orange));
+      left: 0;
+      opacity: 0.9;
+      max-width: 99%;
+      transition: all 0.6s ease;
+      z-index: 1;
+
+   */
