bug fixes and update

--- a/src/components/Formhero/Formhero.css
+++ b/src/components/Formhero/Formhero.css
@@ -17,13 +17,18 @@
     background: #f3f3f3;
     flex-basis: 0%;
   }
-  
+  .success-message{
+    background-color: rgba(7, 255, 7, 0.562);
+    /* margin-top: 1.5rem; */
+    padding: 1rem;
+    border-radius: 20px;
+  }
   .form__hero-text-wrapper {
     padding-top: 0;
     padding-bottom: 60px;
 }
 
-  .row {
+  .form-hero-row {
     display: flex;
     margin-right: -15px;
     margin-bottom: -15px;
@@ -33,6 +38,7 @@
   }
   .headline{
       font-size: 30px;
+      margin-bottom: -1rem;
   }
   .left__hero-img{
     max-width: 100px;
@@ -63,6 +69,10 @@
   .icons:nth-child(1){
     padding-left: 0px;
    }
+   .errors{
+      color: red;
+      padding-left: 1rem;
+   }
   .hr{
     width: 100%;
     height: 3px;
@@ -70,14 +80,29 @@
     background:radial-gradient(var(--light-purple),var(--dark-purple));
     border: none;
   }
-  .forgot-password-link {
-    padding-top: 2rem;
+  .forgot-password-link{
+    padding-top: 1.5rem;
   }
   @media screen and (max-width: 960px) {
+    .form-hero-section{
+      margin-left: 0;
+      margin-top: 50px;
+      margin-bottom: 50px;
+  }
  .form-col{
-    margin-left: -22px;
+    /* margin-left: -22px; */
+    max-width: 99%;
+    padding: 0.5rem;
+    margin: 0;
+    padding-left: 5px;
  }
+ .form-hero-row {
+  display: flex;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+}
  .right__hero-img{
-    max-width: 250px;
+    max-width: 350px;
   }
 }
