--- a/src/components/ForgotPasswordHero/ForgotPasswordHero.css
+++ b/src/components/ForgotPasswordHero/ForgotPasswordHero.css
@@ -1,4 +1,4 @@
-.form-hero-section{
+/* .form-hero-section{
     margin-left: 30px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -80,4 +80,4 @@
  .right__hero-img{
     max-width: 250px;
   }
-}
+} */
