--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,19 +4,18 @@
       margin: 0;
   }
   .home__hero-section {
-    padding: 50px 0;
+    /* padding: 50px 0; */
   }
   .home__hero-row {
     align-items: center;
   }
-  .container {
-    margin: 0;
+  .hero-container {
+    padding-left: 20px;
   }
   .row {
     display: flex;
-    margin-right: -15px;
     margin-bottom: -15px;
-    margin-left: -15px;
+    margin-left: 15px;
     flex-wrap: wrap;
     align-content: stretch;
   }
@@ -24,7 +23,7 @@
   .col {
     margin-bottom: 15px;
     padding-right: 15px;
-    padding-left: 15px;
+    padding-left: 15px; 
     flex: 1;
     max-width: 80%;
     flex-basis: 0%;
@@ -33,12 +32,12 @@
   .home__hero-text-wrapper {
     max-width: 500px;
     padding-top: 0;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px; */
   }
   
   
   .heading {
-    margin-bottom: 24px;
+    /* margin-bottom: 24px; */
     font-size: 58px;
     line-height: 1.1;
     font-weight: 600;
@@ -49,7 +48,7 @@
   
   .home__hero-subtitle {
     max-width: 440px;
-    margin-bottom: 35px;
+    /* margin-bottom: 35px; */
     font-size: 18px;
     font-weight: 500;
     line-height: 24px;
@@ -61,9 +60,9 @@
   
   .home__hero-img {
     max-width: 95%;
-    margin-top: 0;
+    /* margin-top: 0;
     margin-right: 20px;
-    margin-left: 10px;
+    margin-left: 10px; */
     padding-right: 0;
   }
   .small__hero-img{
@@ -76,20 +75,21 @@
     display: flex;
   }
   
-  @media screen and (max-width: 991px) {
-    .container {
-      padding-right: 30px;
-      padding-left: 30px;
-    }
-  }
+ 
   
   @media screen and (max-width: 768px) {
+    .hero-container {
+      /* padding-right: 0; */
+      padding-left: 20px;
+    }
     .home__hero-text-wrapper {
-      padding-bottom: 65px;
-      max-width: 400px;
+      padding-bottom: 5px;
+      max-width: 330px;
+      padding-top: 20px;
     }
     .home__hero-section {
         padding-left: 0px;
+        margin: 0;
       }
     .home__hero-img-wrapper {
         max-width: 300px;
@@ -97,6 +97,11 @@
     .col {
       max-width: 100%;
       flex-basis: 100%;
+      margin: 0;
+      padding-left: 0;
+    }
+    .row{
+      margin-left: 0;
     }
     .heading {
       
@@ -109,6 +114,6 @@
         max-width: 340px;
       }
       .container {
-        margin: -10px;
+        /* margin: -10px; */
       }
   }
