--- a/src/pages/Dashboard/Home/Home.css
+++ b/src/pages/Dashboard/Home/Home.css
@@ -19,10 +19,12 @@
 @media screen and (max-width: 960px) {
     .row-one{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
    
     .section{
         margin-left: 0;
+        /* max-width: 100%; */
     }
   }
