--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -8,6 +8,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 @keyframes ldio-nf8mvbby44-o {
     0%    { opacity: 1; transform: translate(0 0) }
