--- a/src/components/ForgotPasswordHero/ForgotPasswordHero.css
+++ b/src/components/ForgotPasswordHero/ForgotPasswordHero.css
@@ -1,11 +1,14 @@
-/* .form-hero-section{
-    margin-left: 30px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+.fgtpswrd-hero-section{
+    margin-left: 0px;
+    /* padding: 0.5rem; */
+    /* margin-top: 50px;
+    margin-bottom: 50px; */
 }
+/* 
 .right__hero-img-wrapper{
   max-width: 600px;
 }
+
 .form-col {
     margin-bottom: 15px;
     padding-right: 45px;
