--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -160,7 +160,7 @@
     }
   
     .nav-btn {
-      display: flex;
+      display: block;
       justify-content: center;
       align-items: center;
       width: 100%;
