--- a/src/pages/Dashboard/components/ResponsiveSidebar.css
+++ b/src/pages/Dashboard/components/ResponsiveSidebar.css
@@ -39,7 +39,7 @@
         position: fixed;
         text-decoration: none;
         max-width: 35%;
-        display: flex;
+        display: block;
         height: 100%;
         width: 250px;
         flex-direction: column;
@@ -53,7 +53,7 @@
         z-index: 999;
     }
     .show{        
-        display: flex;
+        display: block;
         opacity: 1;
         transition: all 0.6s ease
     }
@@ -83,9 +83,13 @@
         text-decoration: none;
         color:rgb(250, 228, 228);
         gap: 1rem;
-        display: flex;
+        display: block;
     }
     .log{
         display: block;
+        justify-content: center;
+        align-items: center;
+      width: 100%;
+      height: 120px;
     }
 }
