--- a/src/pages/Dashboard/components/ResponsiveSidebar.css
+++ b/src/pages/Dashboard/components/ResponsiveSidebar.css
@@ -40,14 +40,14 @@
         text-decoration: none;
         max-width: 35%;
         display: block;
-        height: 100%;
+        height: 120%;
         width: 250px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         gap: 2rem;
-         padding: 2rem;
-         padding-left: 1rem;
+        padding: 2rem;
+        padding-left: 1rem;
         transition: all 0.6s ease;           
         opacity: 0.6;
         z-index: 999;
@@ -74,7 +74,7 @@
     }
     .responsive__links li{
         transition: all 0.8 ease-out;
-        padding: 1.5rem;
+        padding: 1.0rem;
         list-style: none;
         border-radius: 0.6rem;
         text-decoration: none;
@@ -89,7 +89,7 @@
         display: block;
         justify-content: center;
         align-items: center;
-      width: 100%;
-      height: 120px;
+        width: 100%;
+        /* height: 120px; */
     }
 }
