--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -43,11 +43,14 @@
   
   .footer-input {
     padding: 8px 24px;
-    border-radius: 2px;
+    border-radius: 50px;
     margin-right: 10px;
     outline: none;
     border: none;
     font-size: 18px;
+    min-width: 300px;
+    box-sizing: border-box;
+    height: 70px;
     margin-bottom: 16px;
     border: 1px solid #fff;
   }
