--- a/src/pages/Dashboard/components/Sidebar.css
+++ b/src/pages/Dashboard/components/Sidebar.css
@@ -24,7 +24,8 @@
     left: 0;
     gap: 2rem;
     padding: 2rem;
-
+    padding-right: 1rem;
+    overflow-y: scroll;
 }
 .top{
     display: flex;
@@ -40,7 +41,7 @@
 .links ul{
     list-style-type: none;
     list-style: none;
-    gap: 2rem;
+    gap: 1rem;
     display: flex;
     flex-direction: column;
 }
