--- a/src/pages/Homepage/style.css
+++ b/src/pages/Homepage/style.css
@@ -1,12 +1,23 @@
 .home-page-svg{
-    /* max-height:400px; */
-    position: fixed;
-    z-index: -100;
-    /* top: -10rem; */
-    right: -5rem;
-    top: -100px;
+    max-height:400px;
+    position: absolute;
+    z-index: -10;
+    /* top: 0em; */
+
 }
 .home-page-svg img{
-    height: 100vh;
+    height: 130vh;
+    top: -20rem;
     
+}
+@media screen and (max-width: 960px) {
+    .home-page-svg{
+        top: 0rem;
+        position: absolute;
+    }
+    .home-page-svg img{
+       
+        height: 300vh;
+        
+    }
 }
